Fix mobile toc in dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -236,7 +236,7 @@ a.menu__link svg {
 
 .navbar-sidebar__item.menu {
   background-color: var(--ifm-navbar-sidebar-background-color);
-  padding: 0;
+  padding: 0 8px;
 }
 
 
@@ -271,6 +271,23 @@ a.menu__link svg {
       border-bottom: 2px solid var(--ifm-tabs-color-active);
     }
   }
+}
+
+.theme-doc-toc-mobile {
+  background-color: var(--ifm-navbar-sidebar-background-color) !important;
+}
+
+.theme-doc-toc-mobile .clean-btn {
+  background-color: var(--ifm-navbar-sidebar-background-color);
+  border: 1px solid var(--ifm-color-emphasis-300);
+  border-radius: var(--ifm-global-radius);
+  box-shadow: var(--ifm-global-shadow-lw);
+}
+
+.theme-doc-toc-mobile .table-of-contents {
+  background-color: var(--ifm-navbar-sidebar-background-color);
+  border: 1px solid var(--ifm-color-emphasis-300);
+  border-radius: var(--ifm-global-radius);
 }
 
 .ds-dropdown-menu {
